attempting to fix mobile canvas overflow

--- a/styles/scss/homePage/_carousel.module.scss
+++ b/styles/scss/homePage/_carousel.module.scss
@@ -16,6 +16,7 @@
     margin: 0;
     top: 0;
     left: 0;
+    min-height: -webkit-fill-available;
 
     @media screen and (max-width:$s){
         height: 100vh;
